--- a/contact.html
+++ b/contact.html
@@ -26,5 +26,18 @@ Sebastian Jespersen<br>
 <a href="http://www.flickr.com/photos/sjespersen" target="_blank">Flickr</a><br>
 Location: San Francisco Bay Area, CA
 </div>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40154718-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
