Add basic responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="header">
   <h1>Sebastian Jespersen Photography</h1>
-  <h2>Fashion and Beauty Photographer in San Francisco, CA</h2>
+  <h2>Fashion and Beauty Photographer in San&nbsp;Francisco, CA</h2>
   <ul>
     <li>Portfolio</li>
     <li><a href="http://vimeo.com/17318784" target="_blank">Video</a></li>
