--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in San Diego, CA" />
   <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,San Diego,California,Los Angeles,OC" />
-  <title>Sebastian Jespersen Photography</title>
+  <title>Sebastian Jespersen</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 <div id="header">
-<h1>Sebastian Jespersen Photography</h1>
+<h1>Sebastian Jespersen</h1>
 <h2>Fashion and Beauty Photographer in San&nbsp;Francisco, CA</h2>
 <ul>
 	<li><a href="index.html">Portfolio</a></li>
