--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in San Francisco, CA" />
   <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,San Francisco, Bay Area,California,Los Angeles,OC" />
-  <title>Sebastian Jespersen Photography</title>
+  <title>Sebastian Jespersen</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 <div id="header">
-  <h1>Sebastian Jespersen Photography</h1>
+  <h1>Sebastian Jespersen</h1>
   <h2>Fashion and Beauty Photographer in San&nbsp;Francisco, CA</h2>
   <ul>
     <li>Portfolio</li>
@@ -17,7 +17,7 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </div>
-<div id="scroller"> 
+<div id="scroller">
   <div id="content">
     <ul>
       <li><img src="img/p_01.jpg" /></li>
