Sebastian - Use minified/production resources

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in San Francisco, CA" />
-    <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,San Francisco, Bay Area,California,Los Angeles,OC" />
+    <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in San Francisco, CA">
+    <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,San Francisco, Bay Area,California,Los Angeles,OC">
     <title>Sebastian Jespersen</title>
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+        <link rel="stylesheet" href="styles/79d4440b.main.css">
 </head>
   <body ng-app="sjespersen.github.comApp">
     <!--[if lt IE 7]>
@@ -40,18 +38,11 @@
        ga('send', 'pageview');
     </script>
 
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 
-        <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
-        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/6b865daa.modules.js"></script>
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/8bde0cdf.scripts.js"></script>
 </body>
 </html>
