--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in San Francisco, CA">
-    <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,San Francisco, Bay Area,California,Los Angeles,OC">
+    <meta name="description" content="Sebastian Jespersen Photography: Fashion and Beauty Photographer in Hamburg, Germany">
+    <meta name="keywords" content="Sebastian Jespersen,Photography,Fashion,Beauty,Photographer,Hamburg,Germany">
     <title>Sebastian Jespersen</title>
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
