--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="Sebastian Jespersen">
     <title>Sebastian Jespersen</title>
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="refresh" content="0;url=https://www.linkedin.com/in/sjespersen/">
     <link rel="stylesheet" href="styles/2060d13a.main.css">
 </head>
   <body>
